[package]
name = "sudoku-sat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
boolector = { version = "0.4.3", features = ["vendor-lgl"] }
serde= { version = "1", features = ["derive"] }
serde_json = "1"